jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment-332488
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-332488
  template:
    metadata:
      labels:
        app: jenkins-332488
    spec:
      containers:
      - name: jenkins-332488
        image: jenkins/jenkins:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-332488
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8080
  selector:
    app: jenkins-332488
