nexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-332488
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-332488
  template:
    metadata:
      name: nexus-332488
      labels:
        app: nexus-332488
    spec:
      containers:
      - name: nexus-332488
        image: sonatype/nexus3:latest
        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
          requests:
            memory: "2Gi"
            cpu: "50m"
        ports:
        - containerPort: 8081
          name: nexusport
        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data
      volumes:
      - name: nexus-data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: nexus-332488
  labels:
    app: nexus-332488
spec:
  ports:
  - port: 8081
    targetPort: 8081
    name: nexusport
  selector:
    app: nexus-332488
  type: ClusterIP
